hide sidebar grey box, main view width 100%

--- a/client/views/base.html
+++ b/client/views/base.html
@@ -4,7 +4,7 @@
   <toast></toast>
   <div ui-view="main" class="main-container"></div>
 
-  <div ui-view="sidebar" class="sidebar-container">
+  <div ui-view="sidebar" >
   </div>
   <div ui-view="xyzPlayer"></div>
 
