--- a/client/views/sidebar/sidebar-add.html
+++ b/client/views/sidebar/sidebar-add.html
@@ -1,77 +1,82 @@
-<h2>add</h2>
+<div class="sidebar-container">
+  <h2>add</h2>
 
 
-<div>
-  <h4>Enter a URL or search terms to find media</h4>
-  <input
-      ng-model="newText"
-      ng-change="searchInputChanged(newText)"
-      ng-model-options="{debounce: 750, updateOn:'default'}"
-      placeholder=""
-      focus
-  >
-  <div ng-if="fetchingSongData"><i>searching...</i></div>
-  <div class="filters">
-    <md-checkbox ng-repeat="(filterName, value) in filters" ng-model="filters[filterName]" aria-label="{{filterName}}">
-    {{filterName}}
-  </md-checkbox>
+  <div>
+    <h4>Enter a URL or search terms to find media</h4>
+    <input
+        ng-model="newText"
+        ng-change="searchInputChanged(newText)"
+        ng-model-options="{debounce: 750, updateOn:'default'}"
+        placeholder=""
+        focus
+    >
+    <div ng-if="fetchingSongData"><i>searching...</i></div>
+    <div class="filters">
+      <md-checkbox ng-repeat="(filterName, value) in filters" ng-model="filters[filterName]"
+                   aria-label="{{filterName}}">
+        {{filterName}}
+      </md-checkbox>
+    </div>
+    <div ng-if="newText && error"> Sorry, {{error}} Please try adjusting the URL
+    </div>
   </div>
-  <div ng-if="newText && error"> Sorry, {{error}} Please try adjusting the URL
+
+
+  <div ng-if="FB.isConnected()">
+    <h4>load neat songs from your facebook feed. click the button again to load more</h4><br/>
+    <button ng-click="explore(Social.FB.loadPosts())">more FB posts</button>
   </div>
-</div>
+  <br/>
 
+  <div class="selector-container"
+       ng-if="urlResult.kind === 'user'">
 
-<div ng-if="FB.isConnected()">
-  <h4>load neat songs from your facebook feed. click the button again to load more</h4><br/>
-  <button ng-click="explore(Social.FB.loadPosts())">more FB posts</button>
-</div><br/>
-
-<div class="selector-container"
-     ng-if="urlResult.kind === 'user'">
-
-  <button
-      ng-click="MediaAPI.soundcloud.tracksByUser(urlResult.provider_id)
+    <button
+        ng-click="MediaAPI.soundcloud.tracksByUser(urlResult.provider_id)
         .then(updateImportView)
         .catch(invalidLink)">
-    view all tracks by {{urlResult.artist}}
-  </button>
-  <button
-      ng-click="MediaAPI.soundcloud.likesByUser(urlResult.provider_id)
+      view all tracks by {{urlResult.artist}}
+    </button>
+    <button
+        ng-click="MediaAPI.soundcloud.likesByUser(urlResult.provider_id)
         .then(updateImportView)
         .catch(invalidLink)">
-    view all likes by {{urlResult.artist}}
-  </button>
-</div>
-<div class="selector-container"
-     ng-if="thereAreSearchResults()">
+      view all likes by {{urlResult.artist}}
+    </button>
+  </div>
+  <div class="selector-container"
+       ng-if="thereAreSearchResults()">
 
 
-  <div ng-repeat="item in Library.getSearchResults()"
-       ng-if="!Library.getSearchResults().urlResult && filterAllows(item)" ng-include="'sidebar/sidebar-search-result.html'">
+    <div ng-repeat="item in Library.getSearchResults()"
+         ng-if="!Library.getSearchResults().urlResult && filterAllows(item)"
+         ng-include="'sidebar/sidebar-search-result.html'">
+
+    </div>
+  </div>
+
+
+  <div class="selector-container"
+       ng-if="Library.getSearchResults().urlResult"
+       ng-include="'sidebar/sidebar-search-result.html'"
+       ng-init="item = Library.getSearchResults()">
+    {{ Library.getSearchResults().provider }} media detected:
+    {{ Library.getSearchResults().artist+' - '+Library.getSearchResults().title }}
+    <hr/>
+    <button ng-click="Library.add(Library.getSearchResults())">
+      add
+    </button>
+    <button ng-if="!item.error && Library.isPlayable(Library.getSearchResults())"
+            ng-click="Player.play(Library.getSearchResults())">
+      play
+    </button>
 
   </div>
-</div>
 
-
-<div class="selector-container"
-     ng-if="Library.getSearchResults().urlResult"
-ng-include="'sidebar/sidebar-search-result.html'"
-ng-init="item = Library.getSearchResults()">
-  {{ Library.getSearchResults().provider }} media detected:
-  {{ Library.getSearchResults().artist+' - '+Library.getSearchResults().title }}
-  <hr/>
-  <button ng-click="Library.add(Library.getSearchResults())">
-    add
-  </button>
-  <button ng-if="!item.error && Library.isPlayable(Library.getSearchResults())"
-          ng-click="Player.play(Library.getSearchResults())">
-    play
-  </button>
-
-</div>
-
-<pre class="debug" ng-if="debug">
+  <pre class="debug" ng-if="debug">
   local items: {{Library.getSearchResults() | json}}
 </pre>
 
 
+</div>
