--- a/client/views/sidebar/sidebar-info.html
+++ b/client/views/sidebar/sidebar-info.html
@@ -1,7 +1,9 @@
-( this is an XYZ space, made by
-<a ng-if="owner.website"
-   ng-href="{{Utility.fixUrl(owner.website)}}"
-   target=_blank>
-  {{space.owner.name}}
-</a>
-{{!owner.website? space.owner.name : ''}}.)
+<div class="sidebar-container">
+  ( this is an XYZ space, made by
+  <a ng-if="owner.website"
+     ng-href="{{Utility.fixUrl(owner.website)}}"
+     target=_blank>
+    {{space.owner.name}}
+  </a>
+  {{!owner.website? space.owner.name : ''}}.)
+</div>
