adjust layout, make it a fixed square ( fixes #138, #140 )

--- a/client/scss/_variables.scss
+++ b/client/scss/_variables.scss
@@ -9,7 +9,8 @@ $text-color: #333;
 
 $link-hover-color: #F63357;
 
-$preview-height:200px;
+$xyz-player-height: 300px;
+$sidebar-width: 300px;
 
 $bar-height:1.5em;
 
