--- a/xyz-player-component/xyz-component-style-app-only.scss
+++ b/xyz-player-component/xyz-component-style-app-only.scss
@@ -2,7 +2,7 @@
   color: white;
   z-index: 1;
 
-  height: 300px;
+  height: $xyz-player-height;
   width: 100vw;
   background-color: black;
   text-align: center;
