--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -108,17 +108,13 @@
   position: fixed;
   top: $bar-height;
   right: 0;
-  max-width: 65vw;
+  max-width: $sidebar-width;
   z-index: 4;
   text-align: left;
   padding: 0.3em;
 
   @include MQ(M) {
-    width: 300px;
-
-    input {
-      width: 80%;
-    }
+    width: $sidebar-width;
 
   }
 
@@ -181,8 +177,9 @@
 }
 
 .space-svg-view {
-  height: 100%;
-  width: 100vw;
+  border: 3px dotted pink;
+  margin-bottom: $xyz-player-height;
+  margin-right: $sidebar-width;
 }
 
 .expanded-popup {
