refactor layout_constants

--- a/client/scss/_variables.scss
+++ b/client/scss/_variables.scss
@@ -12,6 +12,9 @@ $link-hover-color: #F63357;
 $xyz-player-height: 300px;
 $sidebar-width: 300px;
 
+$space-margin-left: 3em;
+$space-margin-top: 3em;
+
 $bar-height:1.5em;
 
 $XS:    320px;
