--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -178,15 +178,20 @@
 
 .space-svg-view {
   border: 3px dotted pink;
+  margin-left: $space-margin-left;
+  margin-top: $space-margin-top;
   margin-bottom: $xyz-player-height;
   margin-right: $sidebar-width;
 }
 
 .expanded-popup {
+  background-color: #31708f;
 
   height: 250px;
+  max-width:300px;
 
-  a {
+
+  .dot-title {
     max-height: 4rem;
     overflow: hidden;
     display: block;
@@ -211,4 +216,5 @@
   right: 0;
   top: 0;
 }
+
 
