--- a/client/views/partials/media-preview-toggle-directive.html
+++ b/client/views/partials/media-preview-toggle-directive.html
@@ -1,9 +1,12 @@
-<pre ng-if="debug">item: {{item.title | json}}</pre>
+<!--<pre ng-if="debug">item: {{item.title | json}}</pre>-->
     <md-icon class="icon-btn" ng-if="!item.error && Library.isPlayable(item)"
             ng-click="Player.play(item)" ng-hide="Player.isPlaying(item.provider_id)">
       headset
+
+          <md-tooltip md-delay="500">preview</md-tooltip>
     </md-icon>
     <md-icon class="icon-btn" ng-if="!item.error && Library.isPlayable(item)"
             ng-click="Player.stop()" ng-show="Player.isPlaying(item.provider_id)">
       stop
+          <md-tooltip md-delay="500">close preview</md-tooltip>
     </md-icon>
