--- a/client/views/partials/media-preview-toggle-directive.html
+++ b/client/views/partials/media-preview-toggle-directive.html
@@ -7,6 +7,6 @@
     </md-icon>
     <md-icon class="icon-btn" ng-if="!item.error && Library.isPlayable(item)"
             ng-click="Player.stop()" ng-show="Player.isPlaying(item.provider_id)">
-      stop
+      eject
           <md-tooltip md-delay="500">close preview</md-tooltip>
     </md-icon>
