--- a/client/views/space.html
+++ b/client/views/space.html
@@ -36,8 +36,36 @@
 <div class="expanded-popup"
      ng-style="songExpandedPopupCss()"
      ng-if="expandedItem()"
-     layout="row"
-      ng-include="'partials/item-contextual-menu.html'">
+     layout="column">
+
+  <div layout="row" class="expanded-meta-actions">
+
+    <md-icon class="icon-btn item-button-2"
+             ng-if="canEdit()"
+             ng-click="setFirstSong(expandedItem())">
+      looks_one
+
+      <md-tooltip md-delay="500">
+        set as first
+      </md-tooltip>
+    </md-icon>
+    <md-icon class="icon-btn item-button-3"
+             ng-if="canEdit()"
+             ng-click="removeSong(expandedItem().id)">
+      delete_forever
+
+      <md-tooltip md-delay="500">
+        remove this item
+      </md-tooltip>
+    </md-icon>
+
+  </div>
+
+  <div
+      ng-init="item = expandedItem()"
+      ng-include="'sidebar/sidebar-search-result.html'">
+
+  </div>
 
 </div>
 
