rename search result to media inspector

--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -80,7 +80,7 @@
   font-size: 0.8em;
 }
 
-.search-result-actions {
+.media-inspector-actions {
   background-color: #EEE;
 
   button {
@@ -90,7 +90,7 @@
 
 .sidebar-container {
 
-  .search-result-details {
+  .media-inspector-details {
 
     background-color: white;
     border-left: 1px dotted black;
