--- a/client/scss/_layout-space.scss
+++ b/client/scss/_layout-space.scss
@@ -22,7 +22,7 @@
 
 }
 
-.search-result {
+.media-inspector {
 
   max-height: 200px;
   margin-bottom: 0.5em;
@@ -34,7 +34,7 @@
   width: 250px;
 }
 
-.search-result-details {
+.media-inspector-details {
   padding: 0.5em;
   min-height: 150px;
 
@@ -64,7 +64,7 @@
     min-height: 1.8em;
   }
 
-  .search-result{
+  .media-inspector{
     min-width: 1.8em;
   }
 
