--- a/client/views/partials/media-inspector.html
+++ b/client/views/partials/media-inspector.html
@@ -1,5 +1,5 @@
-<div class="search-result" layout="row">
-  <div layout="column" class="search-result-actions" layout-align="space-around center">
+<div class="media-inspector" layout="row">
+  <div layout="column" class="media-inspector-actions" layout-align="space-around center">
     <div>
       <md-icon class="icon-btn" ng-if="!item.error && isMedia(item)" ng-click="putInSpace(item, $event)">
         add
@@ -20,7 +20,7 @@
 
 
   <div layout="column"
-       class="search-result-details"
+       class="media-inspector-details"
        flex="grow"
        ng-hide="Player.playingItem().provider_id === item.provider_id">
 
@@ -47,7 +47,7 @@
   </div>
 
   <div ng-if="Player.isPlaying(item.provider_id)"
-       media-preview flex="grow" class="search-result-details"></div>
+       media-preview flex="grow" class="media-inspector-details"></div>
   <div ng-hide="Player.playingItem().provider_id === item.provider_id">
     <img class='thumbnail' ng-src="{{item.pic}}" width="200"/>
   </div>
