--- a/client/views/partials/media-inspector.html
+++ b/client/views/partials/media-inspector.html
@@ -49,7 +49,7 @@
   <div ng-if="Player.isPlaying(item.provider_id)"
        media-preview flex="grow" class="media-inspector-details"></div>
   <div ng-hide="Player.playingItem().provider_id === item.provider_id">
-    <img class='thumbnail' ng-src="{{item.pic}}" width="200"/>
+    <img class='thumbnail' ng-src="{{item.pic}}" src="" width="200"/>
   </div>
 
   <pre class="debug" ng-if="false">{{item | json}}</pre>
