--- a/client/views/space.html
+++ b/client/views/space.html
@@ -46,7 +46,7 @@
       looks_one
 
       <md-tooltip md-delay="500">
-        set as first
+        Set as First
       </md-tooltip>
     </md-icon>
     <md-icon class="icon-btn item-button-3"
@@ -55,7 +55,7 @@
       delete_forever
 
       <md-tooltip md-delay="500">
-        remove this item
+        Remove this Item
       </md-tooltip>
     </md-icon>
 
