rename 'viewer' to 'guest', so we dont have viewer = viewer

--- a/client/views/base.html
+++ b/client/views/base.html
@@ -14,7 +14,7 @@
          space-id="{{getPlayingSpace().id}}"
          data-space-name="getPlayingSpace().name"
          playlist="Playlister.list"
-         data-viewer="viewer"
+         data-viewer="guest"
          ng-show="getPlayingSpace()">
 
     </div>
