--- a/client/views/space.html
+++ b/client/views/space.html
@@ -22,7 +22,7 @@
      is-now-playing="isNowPlaying(item)"
      is-first-song="isFirstSong(item)"
      space="space"
-     viewer="viewer"
+     viewer="guest"
      done-dragging="onDragDone(item)"
      layout-constants="layout_constants"
   >
