--- a/client/views/account.html
+++ b/client/views/account.html
@@ -1,4 +1,4 @@
-
+<!-- note - this route is only accessed via email password reset link -->
 <pre ng-if="false" class="debug">user: {{user | json}}</pre>
 <pre ng-if="false" class="debug">at: {{tempAccessToken}}</pre>
 
