--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -2,7 +2,7 @@
   <div ng-if="!User.loggedIn()" class="landing-section" layout="column">
 
     <h4>Sign up</h4>
-    <form layout="column" layout-align="center center"
+    <form id='signup-form' layout="column" layout-align="center center"
         ng-submit="register(registerData)">
 
       <input ng-model="registerData.name" placeholder="your name"><br/>
@@ -13,7 +13,7 @@
     </form>
 
     <h2>or login:</h2>
-    <form layout="column" layout-align="center center" ng-submit="login(loginData)" ng-hide="forgotPassword">
+    <form id='login-form'  layout="column" layout-align="center center" ng-submit="login(loginData)" ng-hide="forgotPassword">
 
       <input ng-model="loginData.email" placeholder="email" type="email" required><br/>
       <input
@@ -28,7 +28,7 @@
 
     </form>
 
-    <form layout="column" layout-align="center center" ng-submit="resetPassword(loginData.email)" ng-show="forgotPassword">
+    <form id='password-reset-form' layout="column" layout-align="center center" ng-submit="resetPassword(loginData.email)" ng-show="forgotPassword">
       <p>Forgot your password? Please enter your email address below, then we'll send you link to reset your
         password</p>
       <input ng-model="loginData.email"
@@ -39,38 +39,6 @@
       <a ng-click="forgotPassword = false">(cancel)</a>
 
     </form>
-
-  </div>
-
-  <div ng-if="User.loggedIn()" class="landing-section">
-
-    <br/>
-
-
-    <div ng-if="isAdding()">
-      <input ng-model="newSpace.name" placeholder="new space name">
-      <md-icon class="icon" ng-click="User.addSpace(newSpace).then(resetAdding).catch(showError)">add_circle</md-icon>
-    </div>
-
-    <div ng-if="!isAdding()">
-      <a ng-click="setAdding()"> + new space</a>
-    </div>
-    <div ng-show="isAdding()">
-      <a ng-click="resetAdding()"> (nevermind)</a>
-    </div>
-
-    <h2 ng-if="User.hasOwnSpaces() || User.hasEditableSpaces()">my spaces:</h2>
-    <ul class="user-spaces-container" layout-wrap layout-align="space-around left" layout="row">
-      <li ng-repeat="space in User.getSpaces().editable"
-          ng-include="'partials/space-thumbnail.html'">
-      </li>
-      <li ng-repeat="space in User.getSpaces().own"
-          ng-include="'partials/space-thumbnail.html'">
-      </li>
-    </ul>
-
-
-    <br/>
 
   </div>
 
