--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -3,20 +3,23 @@
 
     <h4>Sign up</h4>
     <form id='signup-form' layout="column" layout-align="center center"
-        ng-submit="register(registerData)">
+          ng-submit="register(registerData)">
 
-      <input ng-model="registerData.name" placeholder="your name"><br/>
-      <input ng-model="registerData.email" placeholder="email" type="email" required><br/>
-      <input ng-model="registerData.password" placeholder="set a password" type="password" required><br/>
+      <input id="register-name-field" ng-model="registerData.name" placeholder="your name"><br/>
+      <input id="register-email-field" ng-model="registerData.email" placeholder="email" type="email" required><br/>
+      <input id="register-password-field" ng-model="registerData.password" placeholder="set a password" type="password"
+             required><br/>
 
       <input type="submit" value="submit"/>
     </form>
 
     <h2>or login:</h2>
-    <form id='login-form'  layout="column" layout-align="center center" ng-submit="login(loginData)" ng-hide="forgotPassword">
+    <form id='login-form' layout="column" layout-align="center center" ng-submit="login(loginData)"
+          ng-hide="forgotPassword">
 
-      <input ng-model="loginData.email" placeholder="email" type="email" required><br/>
+      <input id="login-email-field" ng-model="loginData.email" placeholder="email" type="email" required><br/>
       <input
+          id="login-password-field"
           ng-model="loginData.password"
           placeholder="password"
           type="password"
@@ -28,7 +31,8 @@
 
     </form>
 
-    <form id='password-reset-form' layout="column" layout-align="center center" ng-submit="resetPassword(loginData.email)" ng-show="forgotPassword">
+    <form id='password-reset-form' layout="column" layout-align="center center"
+          ng-submit="resetPassword(loginData.email)" ng-show="forgotPassword">
       <p>Forgot your password? Please enter your email address below, then we'll send you link to reset your
         password</p>
       <input ng-model="loginData.email"
@@ -42,4 +46,4 @@
 
   </div>
 
-  </center>
+</center>
