--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -1,4 +1,4 @@
-<center>
+<div style="text-align: center;">
   <div ng-if="!User.loggedIn()" class="landing-section" layout="column">
 
     <h4>Sign up</h4>
@@ -46,4 +46,4 @@
 
   </div>
 
-</center>
+</div>
