--- a/client/scss/_layout-space.scss
+++ b/client/scss/_layout-space.scss
@@ -54,7 +54,7 @@
   border: 3px dotted pink;
   margin-left: $space-margin-left;
   margin-top: $space-margin-top;
-  margin-bottom: $xyz-player-height;
+  margin-bottom: 400px;
   margin-right: $sidebar-width;
 }
 
