--- a/client/views/sidebar/sidebar-edit.html
+++ b/client/views/sidebar/sidebar-edit.html
@@ -5,26 +5,26 @@
 
     <label for="space-name-input" flex="15" >Name</label>
     <input id="space-name-input"
-           ng-model="space.name"
+           ng-model="spaceEdits.name"
            placeholder="(untitled)"
            name="name"
            >
 
 
     <md-checkbox id="public-checkbox"
-           name="public" type="checkbox" ng-model="space.public" aria-label="Public">
+           name="public" type="checkbox" ng-model="spaceEdits.public" aria-label="Public">
       Public
     </md-checkbox>
 
 
-    <input type="submit" value="save" ng-click="saveEdits(space)" ng-show="spaceEditForm.$dirty"> </input>
+    <input type="submit" value="save" ng-click="saveEdits(spaceEdits)" ng-show="spaceEditForm.$dirty">
 
     <pre class="debug" ng-if="false">{{spaceEditForm || json}}</pre>
   </form>
 
 
   <label>Contributors</label>
-  <div ng-repeat="contributor in getContributors()">
+  <div ng-repeat="contributor in Spaces.current().contributors">
     {{contributor.name}}
     <md-icon class="icon-btn"
              ng-click="removeFromContributors(contributor)">remove_circle
@@ -45,10 +45,6 @@
 
   <br/>
 
-  <button ng-click="deleteViaConfirm(Space,space)">delete space</button>
+  <button ng-click="deleteViaConfirm()">delete space</button>
 
-  <div class="error" ng-if="error">{{error}}</div>
-  <pre ng-if="false" class="debug">
-        {{space | json}}
-      </pre>
 </div>
