--- a/client/views/space.html
+++ b/client/views/space.html
@@ -13,15 +13,15 @@
   <path class="playlist-line"
         ng-attr-d="{{linePath(Playlister.list || [])}}"
         d=""
-        fill="none" stroke="lightgrey" ng-if="space.songs[0]"></path>
+        fill="none" stroke="lightgrey" ng-if="Spaces.current().songs[0]"></path>
 
-  <g ng-repeat="item in space.songs"
+  <g ng-repeat="item in Spaces.current().songs"
      media-item-dot
      item="item"
      ng-click="handleDotClick(item, $event)"
      is-now-playing="isNowPlaying(item)"
      is-first-song="isFirstSong(item)"
-     space="space"
+     space="Spaces.current()"
      viewer="guest"
      done-dragging="onDragDone(item)"
      layout-constants="layout_constants"
@@ -42,7 +42,7 @@
 
     <md-icon class="icon-btn item-button-2"
              ng-if="canEdit()"
-             ng-click="setFirstSong(expandedItem())">
+             ng-click="setFirstSongThenRecompute(expandedItem())">
       looks_one
 
       <md-tooltip md-delay="500">
@@ -51,7 +51,7 @@
     </md-icon>
     <md-icon class="icon-btn item-button-3"
              ng-if="canEdit()"
-             ng-click="removeSong(expandedItem().id)">
+             ng-click="removeSong(expandedItem())">
       delete_forever
 
       <md-tooltip md-delay="500">
@@ -70,7 +70,7 @@
 </div>
 
 
-<div ng-if="Library.songs().length === 0">
+<div ng-if="Spaces.current().songs.length === 0">
 
   <div class="xyz-item" style="left:45vw; top:10vh;">
 
@@ -88,6 +88,7 @@
 
 </div>
 
-
+<pre class="debug right-panel" ng-if="debug">space: {{space | json}}</pre>
+<pre class="debug right-panel" ng-if="debug">space in map: {{Spaces.current() | json}}</pre>
 <pre class="debug right-panel" ng-if="debug">Playlister.List: {{Playlister.getList() | json}}</pre>
 <pre class="debug right-panel" ng-if="debug">space songs: {{space.songs | json}}</pre>
