finish refactor to use map

--- a/client/views/space.html
+++ b/client/views/space.html
@@ -21,7 +21,7 @@
      ng-click="handleDotClick(item, $event)"
      is-now-playing="isNowPlaying(item)"
      is-first-song="isFirstSong(item)"
-     space="Spaces.current()"
+     data-space="currentSpace"
      viewer="guest"
      done-dragging="onDragDone(item)"
      layout-constants="layout_constants"
