improve label on sitewide player enabled

--- a/client/views/partials/user-settings-popup.html
+++ b/client/views/partials/user-settings-popup.html
@@ -22,7 +22,8 @@
                  ng-init = "swpEnabled = Utility.isSideWidePlayerEnabled()"
                  ng-change = "Utility.setSiteWidePlayerEnabledTo(swpEnabled)"
                  aria-label="Sitewide Player Enabled"
-                 >
+                 class="enable-sitewide-player">
+      Sitewide Player Enabled
       <md-tooltip> disabling can improve site responsiveness </md-tooltip>
     </md-checkbox>
 
