--- a/client/views/partials/media-preview-directive.html
+++ b/client/views/partials/media-preview-directive.html
@@ -1,3 +1,8 @@
+
+  <pre class="debug" ng-if="debug" style="max-height:150px; overflow: scroll;">
+    {{Player.playingItem() | json}}
+  </pre>
+
 <div ng-if="Library.isPlayable(Player.playingItem())" class="media-preview">
 
   <div ng-if="Player.playingAttrs().provider === 'youtube'">
@@ -47,11 +52,7 @@
             style="border: 0; width: 100%; height:100%;"
 
             ng-src="{{iFrameUrl(Player.playingAttrs(), Player.status)}}"
-            seamless>
-
-      <a href="http://1080pcollection.bandcamp.com/album/12-hours-full-relaxation">
-        &quot;12 Hours FULL RELAXATION&quot; by I Am Just A Pupil
-      </a>
+            data-seamless>
 
     </iframe>
   </div>
@@ -74,9 +75,6 @@
 
 
 
-  <pre class="debug" ng-if="false">
-    {{Player.playingItem() | json}}
-  </pre>
 </div>
 
 
