--- a/client/views/partials/media-inspector-directive.html
+++ b/client/views/partials/media-inspector-directive.html
@@ -33,7 +33,7 @@
 
     </div>
     <div ng-if="!Library.isPlayable(item)">
-      (media is not playable)
+      <md-icon > {{item.kind === 'user'? 'person' : 'help'}}</md-icon>
     </div>
   </div>
 
