include debug, make font smaller

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -23,4 +23,5 @@
 @import "helper-tools/bootstrap/alerts";
 @import "helper-tools/toast-animation";
 
+@import "helper-tools/developer-helper/debug";
 
