don't call gethovering() so much - fixes digest error

--- a/client/views/space.html
+++ b/client/views/space.html
@@ -94,10 +94,10 @@
 
 </div>
 
-<div class="item-hover" ng-if="getHovering()"
-     style="position:absolute; background-color:white;"
-     ng-style="getHovering().css">
+<div ng-if="isHovering()">
+  <div class="item-hover"  ng-style="getHovering().css" style="position:absolute; background-color:white;">
   {{getHovering().item.title}}
+  </div>
 </div>
 
 <debug name="'expanded item'" obj="expandedItem()" max-height="150"></debug>
