--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,19 +1,10 @@
-<div>
-  <div class="landing-section">
 
-    <ul layout-wrap layout-align="space-around left" layout="row">
-      <li ng-repeat="space in Spaces.getPublic()"
-          ng-include="'partials/space-thumbnail.html'"></li>
-    </ul>
-
-  </div>
-
-</div>
 
 
 <div ng-if="User.loggedIn()" class="landing-section">
+  <h2>My Spaces</h2>
 
-  <a id="create-new-space" ng-click="createNewSpace()"> + new space</a>
+  <a id="create-new-space" ng-click="createNewSpace()"> + create new space</a>
 
   <h2 ng-if="User.hasOwnSpaces() || User.hasEditableSpaces()">my spaces:</h2>
 
@@ -29,6 +20,19 @@
 
 
   <br/>
+
+</div>
+
+<div>
+  <div class="landing-section public-spaces-container">
+  <h2>Public Spaces</h2>
+
+    <ul layout-wrap layout-align="space-around left" layout="row">
+      <li ng-repeat="space in Spaces.getPublic()"
+          ng-include="'partials/space-thumbnail.html'"></li>
+    </ul>
+
+  </div>
 
 </div>
 
